Closed Bug 1594061 Opened 5 years ago Closed 5 years ago

Assertion failure: cx->realm() == group->realm() using FinalizationGroup from another realm

Categories

(Core :: JavaScript: GC, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla72
Tracking Status
firefox72 --- fixed

People

(Reporter: jonco, Assigned: jonco)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

I tried adding a test that uses a FinalizationGroup from another realm and it blows up.

#0  0x00005555567fa3cc in js::FinalizationGroupObject::cleanupQueuedHoldings(JSContext*, JS::Handle<js::FinalizationGroupObject*>, JS::Handle<JSObject*>) (cx=0x7ffff5437000, group=Python Exception <class 'gdb.error'> No type "Class" within class or namespace "js".: 
0x509c6da78e0, callbackArg=0x0) at /home/jon/clone/weakref/js/src/builtin/FinalizationGroupObject.cpp:552
#1  0x0000555556864c01 in JS::CleanupQueuedFinalizationGroup(JSContext*, JS::Handle<JSObject*>) (cx=0x7ffff5437000, group=Python Exception <class 'gdb.error'> No type "Class" within class or namespace "js".: 
0x509c6da78e0)
    at /home/jon/clone/weakref/js/src/jsapi.cpp:1300
#2  0x0000555556645724 in MaybeRunFinalizationGroupCleanupTasks(JSContext*) (cx=0x7ffff5437000) at /home/jon/clone/weakref/js/src/shell/js.cpp:1042
#3  0x0000555556645724 in RunShellJobs(JSContext*) (cx=0x7ffff5437000) at /home/jon/clone/weakref/js/src/shell/js.cpp:1078
#4  0x000055555663d4f8 in Shell(JSContext*, js::cli::OptionParser*, char**) (cx=0x7ffff680b680 <_IO_2_1_stderr_>, op=<optimised out>, envp=<optimised out>)
    at /home/jon/clone/weakref/js/src/shell/js.cpp:10890
#5  0x0000555556637707 in main(int, char**, char**) (argc=<optimised out>, argv=<optimised out>, envp=<optimised out>)
    at /home/jon/clone/weakref/js/src/shell/js.cpp:11533

Pushed by jcoppeard@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/baf4f9cc8ff3
Make FinalizationGroups work correctly when called from a different realm r=sfink
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla72
Regressions: 1596808
No longer regressions: 1596808
Has Regression Range: --- → yes
Keywords: regression
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: