Bug 1594061 - Make FinalizationGroups work correctly when called from a different realm r=sfink

Differential Revision: https://phabricator.services.mozilla.com/D51856